[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/TestLogin.gd" type="Script" id=1]

[node name="TestLogin" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 250.0
margin_top = 40.0
margin_right = 750.0
margin_bottom = 302.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 493.0
margin_bottom = 326.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_right = 486.0
margin_bottom = 319.0

[node name="Login_list" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 486.0
margin_bottom = 99.0
text = "Login - Test Screen




"

[node name="Request_Message" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 486.0
margin_bottom = 117.0

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 486.0
margin_bottom = 125.0

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 486.0
margin_bottom = 263.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_right = 223.0
margin_bottom = 14.0
text = "Username"

[node name="user" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 18.0
margin_right = 223.0
margin_bottom = 42.0

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 46.0
margin_right = 223.0
margin_bottom = 60.0
text = "Password"

[node name="password" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 64.0
margin_right = 223.0
margin_bottom = 88.0
secret = true

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 92.0
margin_right = 223.0
margin_bottom = 106.0
text = "Nickname(For Registering Account)"

[node name="nickname" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 110.0
margin_right = 223.0
margin_bottom = 134.0
secret = true

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 267.0
margin_right = 486.0
margin_bottom = 271.0

[node name="Login" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 275.0
margin_right = 486.0
margin_bottom = 295.0
text = "Login"

[node name="Register" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 299.0
margin_right = 486.0
margin_bottom = 319.0
text = "Register"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Register" to="." method="_on_Register_pressed"]
